--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -48,6 +48,11 @@
 \fixme{some text}
 \includepdf[pages=5-18,trim=0 2cm 0 1.8cm,clip,pagecommand=,offset=0 1cm]{./img/sphinx.pdf}
 
+\chapter{Task description / Aufgabenstellung}
+\label{ch:aufgabenstellung}
+\fixme{some text}
+\includepdf[pages=-,pagecommand=]{./img/SA_Bruhin_Aufgabenstellung_v2.pdf}
+
 \chapter{Test log}
 \label{ch:testlog}
 \begin{minted}{text}
