--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -65,6 +65,9 @@ their extensions independently from the core development.
 \section{Objectives}
 \label{goals}
 
+The official task description (``Aufgabenstellung'') in German can be found in
+appendix \ref{ch:aufgabenstellung}.
+
 \subsection{Merging contributions}
 
 \subsection{Refactorings}
