Fix Y-Approach citation

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -1,8 +1,11 @@
-@Article{yapproach,
-  author = {Olaf Zimmermann and Uwe Zdun and Huy Tran and Rafael Capilla},
-  title = {Sustainable Architectural Design Decisions},
-  journal = {IEEE Software},
-  year = {2014},
+@online{yapproach,
+  author = {Olaf Zimmermann},
+  organization = {ABB Corporate Research},
+  title = {Making Architectural Knowledge Sustainable -- Industrial Practice Report and Outlook},
+  note = {Invited IEEE Software Speaker, SEI SATURN},
+  year = {2012},
+  url = {https://resources.sei.cmu.edu/library/asset-view.cfm?assetID=22132},
+  urldate = {2018-12-19},
 }
 
 @TechReport{w3c-webext,
