Turn on twoside early
Otherwise the page numbers are wrong

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -1,6 +1,8 @@
 % -*- TeX-master: "main.tex" -*-
 
-\documentclass[a4paper,parskip=half,DIV=14,BCOR=15mm]{scrreprt}
+\documentclass[a4paper,parskip=half,DIV=14,BCOR=15mm,twoside]{scrreprt}
+\raggedbottom
+\interfootnotelinepenalty=10000
 
 %\usepackage{showframe}
 
@@ -16,7 +18,6 @@
 \usepackage{pdfpages}
 \usepackage{multicol}
 \usepackage[super]{nth}
-\interfootnotelinepenalty=10000
 
 \usepackage{minted}
 \renewcommand{\listingscaption}{\normalfont{}Listing}
