Last language review
See #23

--- a/doc/abstract.tex
+++ b/doc/abstract.tex
@@ -42,7 +42,7 @@ giants: It does not implement complex tasks such as downloading and executing
 HTML/CSS/JavaScript code itself. Instead, it relies on the QtWebEngine project
 to do so, which is largely based on the same code as Google Chrome.
 
-Work on qutebrowser started in December 2013. Since then, it gained a big
+Work on qutebrowser started in December 2013. Since then, it has gained a big
 community of thousands of users and dozens of contributors.
 
 \begin{figure}[H]
@@ -105,5 +105,5 @@ they should then be gradually opened to interested external developers so that
 third-party extensions can be written.
 
 After third-party extensions gain enough traction, an ``extension manager''
-should be developed, so that users can easily install and update available
+should be developed so that users can easily install and update available
 extensions via a graphical user interface.
