Make bibliography more compact

--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -32,7 +32,7 @@
 \usepackage{csquotes}
 \usepackage[backend=biber,style=authoryear-ibid,autocite=inline]{biblatex}
 \addbibresource{bibliography.bib}
-\setlength\bibitemsep{\baselineskip}
+\setlength\bibitemsep{0.7\baselineskip}
 
 % http://wiki.luatex.org/index.php/Attributes
 % conflicts with \attribute from pgf-umlcd
