Write more about goals

--- a/doc/bibliography.bib
+++ b/doc/bibliography.bib
@@ -95,3 +95,10 @@
   publisher={Wiley}
 }
 
+@report{oss-survey,
+  title = {Open Source Survey},
+  author = {{GitHub, Inc.}},
+  url = {https://opensourcesurvey.org/2017/},
+  urldate = {2018-12-20},
+  year = {2017},
+}
