--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -113,7 +113,7 @@ The following changes are planned:
     asciidoc\footnote{\url{http://asciidoc.org/}} which is unsuitable for API
     documentation and ceased maintenance. The
     Sphinx\footnote{\url{http://www.sphinx-doc.org/}} tool should be
-    introduced instead, which is tailored for documenting APIs.
+    introduced instead, which is tailored to documenting APIs.
   \item \url{https://github.com/qutebrowser/qutebrowser/issues/640}: \\
     Global objects are registered in a object registry based on a name as
     string (``stringly-typed''\footnote{\url{http://wiki.c2.com/?StringlyTyped}}).
@@ -313,5 +313,3 @@ Clockify\footnote{\url{https://www.clockify.me/}} for time tracking.
 
 This document was typeset in \LaTeX{} using the \emph{Computer Modern Bright}
 font and various additional packages. GNU Emacs was used as text editor.
-
-\fixme{Nutzungsrechte}
