Explain need for design decisions

--- a/doc/intro.tex
+++ b/doc/intro.tex
@@ -303,7 +303,10 @@ documentation, as a different structure (such as a list of considerations, or
 prose text) is often more readable. Thus, it was used as an inspiration only,
 but the explanations in this document do not strictly follow its structure.
 
-\fixme{we don't need high-level decisions}
+Finally, note that the Y-Approach is intended for bigger architectural
+decisions. However, since the high-level architecture of qutebrowser and its
+extension API is already predetermined, only design decisions related to the API
+design and its implementation remain.
 
 \subsection{Tools used}
 Since this project was realized by a single author (rather than in a group),
