--- a/doc/appendices.tex
+++ b/doc/appendices.tex
@@ -13,6 +13,9 @@
       qutebrowser, such as doing network requests or drawing website content.}
   \item[CI]{Continuous integration, i.e., running automated tests or other
       checks with every change.}
+  \item[CSS]{Cascading Style Sheets, used to define styling/appearance of web pages.}
+  \item[decorator] A \emph{Python} decorator allows annotating/wrapping a
+    function. See section \ref{sec:langfeatures}.
   \item[DOM]{Document Object Model, the \emph{API} to access a HTML document as
       a tree structure.}
   \item[extension]{Code using an \emph{API} in order to extend the functionality
@@ -20,9 +23,12 @@
   \item[GUI]{Graphical User Interface}
   \item[HSR]{The Hochschule für Technik (University of Applied Sciences) in
       Rapperswil, Switzerland.}
+  \item[HTML]{HyperText Markup Language, the language used to structure web
+      pages.}
   \item[IDE]{Integrated Development Environment -- a software application
       providing tools (such as a source editor) for development.}
   \item[IFS]{The Institute for Software at \emph{HSR}.}
+  \item[JavaScript]{The programming language used for interactive web sites.}
   \item[plugin]{In most contexts, the same as an \emph{extension}. Note that
       qutebrowser initially used \emph{plugin API} to refer to its extension
       API. However, this should be avoided, as ``plugin'' is too ambiguous in
@@ -38,6 +44,10 @@
       QtWebKit is the older backend, which isn't used by default anymore, but is
       still supported.}
   \item[SA]{Studienarbeit (Student research project)}
+  \item[slot] A slot is the method or function connected to a \emph{signal} in
+    \emph{Qt}. See section \ref{sec:langfeatures}.
+  \item[signal] A signal is a \emph{Qt} feature which lets objects communicate
+    with each other. See section \ref{sec:langfeatures}.
   \item[W3C]{World Wide Web Consortium, the standards body for web-related
       technologies such as HTML.}
 \end{description}
