--- a/doc/results.tex
+++ b/doc/results.tex
@@ -7,6 +7,8 @@
 % Zielerreichung
 \section{Achievement of Objectives}
 
+\fixme{review risks}
+
 In this chapter, the objectives set in section \ref{goals} will be reviewed.
 
 \subsection{Merging contributions}
